[package]
name = "git-biance"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
description = "A small program that shows and visualizes code contributions in a git repository."
homepage = "https://github.com/xiaoshihou514/git-biance"
repository = "https://github.com/xiaoshihou514/git-biance"
keywords = ["git", "cli", "terminal"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
charming = "0.4.0"
clap = { version = "4.5.28", features = ["derive"] }
once_cell = "1.20.3"
regex = "1.11.1"
time = { version = "0.3.37", features = ["formatting"] }
